ergastapp/ergastapp-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: ergastapp-ingress
  namespace: default
spec:
  rules:
    - host: ergastapp.bienlab.com
      http:
        paths:
          - backend:
              serviceName: ergastapp-service
              servicePort: 80
status:
  loadBalancer: {}
